Spell checks and grammar corrections

--- a/channel-simplify-SaaS.html
+++ b/channel-simplify-SaaS.html
@@ -250,7 +250,7 @@
                             <img class="pb-3 lg:pr-3 lg:pb-0" src="img/ChannelSimplify/Rough sketches for icons that would be used later on in the interface.webp" alt="" />
                         </a>
                     </div>
-                     <p class="mt-2 mb-3 text-sm italic text-gray-400 text-left xl:text-base lg:mb-0">Low fidelity exploration for the the layout and other UI elements</p>
+                     <p class="mt-2 mb-3 text-sm italic text-gray-400 text-left xl:text-base lg:mb-0">Low fidelity exploration for the layout and other UI elements</p>
                 </div>
             </div>
 
@@ -293,7 +293,7 @@
 
             <div class="lg:mt-12">
                 <div class="border-b-2 py-2 flex justify-between items-center lg:py-0 lg:border-0" id="heading6" onclick="accordion(this.id);">
-                    <h2 class="text-xl font-bold text-gray-800 xl:text-2xl pb-2 lg:pb-4">Well defined design system</h2>
+                    <h2 class="text-xl font-bold text-gray-800 xl:text-2xl pb-2 lg:pb-4">Well-defined design system</h2>
                     <img class="bg-gray-300 bg-opacity-0 rounded-full w-8 h-8 p-1 opacity-50 lg:hidden" src="img/ArrowBottom.svg" alt="">
                 </div>
                 <div class="hidden lg:block lg:border-0" id="content6">
@@ -362,7 +362,7 @@
                     <li>Creating a design system for a product with a large scope</li>
                     <li>Making pixel-perfect icons and ensuring visual consistency in a large group of icons</li>
                     <li>The importance of early planning to ensure smooth operations later on</li>
-                    <li>Collaborating with developers, to delegate, and QA</li>
+                    <li>How to collaborate with developers, delegate efficiently, and plan for QA</li>
                 </ul>
             </div>
         </div>
@@ -375,7 +375,7 @@
                 <img class="rotate-90 rounded-full w-8 h-8 p-1" src="img/ArrowWhite.svg" alt="">
                 <div class="lg:pl-4">
                     <p class="text-sm font-base text-white text-left opacity-50 lg:text-base xl:text-lg">Previous</p>
-                    <p class="text-sm font-medium text-white text-left lg:text-lg xl:text-xl">Project managemnt for a government initiative</p>
+                    <p class="text-sm font-medium text-white text-left lg:text-lg xl:text-xl">Project management for a government initiative</p>
                 </div>
                 </div>
             </a>
