--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
 
         <div class="px-8 pt-36 pb-4 grid grid-cols-1 sm:px-28 lg:px-14 lg:pb-20 xl:px-20 2xl:max-w-screen-2xl 2xl:mx-auto">
             <div class="text-center lg:grid lg:grid-cols-12">
-                <p class="text-lg text-gray-500 font-semibold xl:text-xl lg:col-span-4 lg:col-start-5">Hi there. I am Apurba 👋</p>
-                <h1 class="mt-2 text-4xl text-akayik-900 font-medium xl:text-4xl lg:col-span-6 lg:col-start-4">I design <span class="font-bold">UX Solutions</span></h1>
-                <p class="mt-6 text-gray-700 text-base xl:text-lg lg:col-span-8 lg:col-start-3">I have been designing minimal, goal driven products and interfaces since 2018. I enjoy balancing user needs and business needs to create problem oriented human-centered designs.</p>
+                <p class="text-m text-gray-500 font-semibold lg:text-xl lg:col-span-4 lg:col-start-5">Hi there. I am Apurba 👋</p>
+                <h1 class="mt-2 text-2xl lg:text-4xl text-akayik-900 font-medium lg:col-span-6 lg:col-start-4">I design <span class="font-bold">UX Solutions</span></h1>
+                <p class="mt-6 text-gray-700 text-base xl:text-lg lg:col-span-8 lg:col-start-3">I have been designing minimal, goal-driven products and interfaces since 2016. I enjoy balancing user needs and business needs to create problem-oriented human-centered designs.</p>
             </div>
         </div>
 
@@ -202,7 +202,7 @@
 
         <div class="px-8 pb-4 sm:px-28 lg:pt-14 lg:pb-12 lg:px-10 xl:px-20 2xl:max-w-screen-2xl 2xl:mx-auto">
             <div class="text-center lg:px-40">
-                <p class="text-gray-700 text-base lg:text-sm xl:text-lg pb-4 lg:col-span-10 lg:col-start-2 noHeight">Before I donned the hat of a UX Designer, I had other hats: Graphic Designer, Logo Designer, Branding Specialist, and Brand Consultant. While the labels have changed over the years, my view on design hasn’t. For me, design will always be about solving important problems. I have enjoyed designing for as long as I can remember and I love briefs that push me to my limits and force me to evolve. I love learning new things, implementing them in my process, and serving people better. </p>
+                <p class="text-gray-700 text-base lg:text-sm xl:text-lg pb-4 lg:col-span-10 lg:col-start-2 noHeight">Before I donned the hat of a UX Designer, I had other hats: Graphic Designer, Logo Designer, Branding Specialist, and Brand Consultant. While the labels have changed over the years, my view on design hasn’t. For me, design will always be about solving significant problems. I have enjoyed designing for as long as I can remember and I love briefs that push me to my limits and force me to evolve. I love learning new things, implementing them in my process, and serving people better.</p>
                 <a class="text-akayik-900 block text-base lg:text-sm xl:text-lg pb-10 lg:pb-4 lg:col-span-4 lg:col-start-5 mt-8 lg:font-medium" href="about.html" target="_blank" rel="noopener noreferrer"><u>Learn more about me as a designer and my design journey</u></a>
             </div>
         </div>
