--- a/off-grid-bazaar-project-management.html
+++ b/off-grid-bazaar-project-management.html
@@ -225,7 +225,7 @@
             <h3 class="text-lg font-semibold text-gray-900 opacity-75 lg:col-span-12 xl:text-xl xl:mb-4">Solution</h3>
             <div>
                 <h1 class="text-3xl font-bold text-akayik-900 xl:text-4xl">Highlights of the outcome</h1>
-                <p class="mt-4 text-base text-gray-700 lg:text-sm xl:text-lg mb-4">There was a lot of uncertainty with regards to the re-design before it was launched. Would the user group actually accept the re-design? Would the re-design actually drive up the lead generation? These questions were valid and prominent before the product was launched. Despite the self-doubt and the preliminary resistance, the outcomes were worth everything. </p>
+                <p class="mt-4 text-base text-gray-700 lg:text-sm xl:text-lg mb-4">Despite the process seeming convoluted at times, the outcomes were truly rewarding. Nothing feels as good as coming up with efficient solutions to tangible problems. And that is exactly what happened.</p>
             </div>
 
         </div>
