--- a/super-krishak-system-design.html
+++ b/super-krishak-system-design.html
@@ -138,7 +138,7 @@
     <div class="bg-white px-8 py-8 grid grid-cols-1 sm:px-28 lg:grid-cols-12 lg:px-14 lg:py-20 xl:px-20 2xl:max-w-screen-2xl 2xl:mx-auto">
         <h3 class="text-lg font-semibold text-gray-900 opacity-75 xl:text-xl 2xl:mb-4 lg:col-span-12">Objective</h3>
         <div class="lg:col-span-5">
-            <h1 class="text-3xl font-bold text-akayik-900 xl:text-4xl">Tailored learning experience for targeted audience</h1>
+            <h1 class="text-3xl font-bold text-akayik-900 xl:text-4xl">A tailored learning experience for the targeted audience</h1>
         </div>
         <div class="lg:col-span-6 lg:col-start-7">
             <p class="mt-4 lg:mt-0 text-base text-gray-700 lg:text-sm xl:text-lg">Gham Power had been providing free and paid agri-training to small-holder farmers in Nepal for a long time. However, there was a need for a system to increase the involvement of farmers and to find out if the farmers were implementing what they had learned. There was also the problem of the lack of access to information for farmers who may have access to the internet but cannot access reliable information sources due to their lack of command of the English language. Apart from that, there was also the need for a control center that handled all of the ongoing processes.</p>
@@ -220,7 +220,7 @@
             <h3 class="text-lg font-semibold text-gray-900 opacity-75 lg:col-span-12 xl:text-xl xl:mb-4">Solution</h3>
             <div>
                 <h1 class="text-3xl font-bold text-akayik-900 xl:text-4xl">Highlights of the outcome</h1>
-                <p class="mt-4 text-base text-gray-700 lg:text-sm xl:text-lg mb-4">There was a lot of uncertainty with regards to the re-design before it was launched. Would the user group actually accept the re-design? Would the re-design actually drive up the lead generation? These questions were valid and prominent before the product was launched. Despite the self-doubt and the preliminary resistance, the outcomes were worth everything. </p>
+                <p class="mt-4 text-base text-gray-700 lg:text-sm xl:text-lg mb-4">The end product exceeded expectations. The whole gamified application as well as the back-end was very well received and is acting as a good base for further improvements in the system.</p>
             </div>
 
         </div>
@@ -236,7 +236,7 @@
                     <p class="mt-2 text-base text-gray-700 lg:text-sm xl:text-lg pb-2 lg:pb-0" >It was difficult to make the farming population learn simply for the sake of learning. There was a need to give them a goal and add a sense of accomplishment to their learning process. We found the answer in gamifying the experience. To find a way to celebrate little activities and interactions by the farmers and create a sense of healthy competition in the farming community. Giving the farmers a goal to accomplish also acted as a great source of extrinsic motivation. Farmers who amassed a certain amount of points would also get awarded in real-life.
                     </p>
                     <div class="mt-8 flex flex-wrap justify-left lg:flex-nowrap overflow:scroll lg:overflow-hidden">
-                        <a class="glightbox w-3/3 lg:w-3/6 inline" href="img/Krishak/Gamified Interactions.webp" data-glightbox="type: image; description: Smallest actions were rewarded with in-app points and the whole interaction was made as enternaining as possible" data-gallery="g3" >
+                        <a class="glightbox w-3/3 lg:w-3/6 inline" href="img/Krishak/Gamified Interactions.webp" data-glightbox="type: image; description: Smallest actions were rewarded with in-app points and the whole interaction was made as entertaining as possible" data-gallery="g3" >
                             <img class="pb-3 lg:pr-3 lg:pb-0" src="img/Krishak/Gamified Interactions.webp" alt="image" />
                         </a>
                         <a class="glightbox w-3/3 lg:w-3/6 inline" href="img/Krishak/Weekly Quizzes.webp" data-glightbox="type: image; description: Daily quizzes acted as a great litmus test for the absorption of information by farmers as well as a common challenge for the users" data-gallery="g3" >
@@ -259,7 +259,7 @@
                             <img class="pb-3 lg:pr-3 lg:pb-0" src="img/Krishak/Agri feed.webp" alt="image" />
                         </a>
                     </div>
-                     <p class="mt-2 mb-3 text-sm italic text-gray-400 text-left xl:text-base lg:mb-0">Some screengrabs from the old website of My Emotions Matter</p>
+                     <p class="mt-2 mb-3 text-sm italic text-gray-400 text-left xl:text-base lg:mb-0">A dedicated feed for up-to-date farming related information</p>
                 </div>
             </div>
 
@@ -281,7 +281,7 @@
                             <img class="pb-3 lg:pr-3 lg:pb-0" src="img/Krishak/Training Controls.webp" alt="image" />
                         </a>
                     </div>
-                     <p class="mt-2 mb-3 text-sm italic text-gray-400 text-left xl:text-base lg:mb-0">Some CRM controls of the back-end</p>
+                     <p class="mt-2 mb-3 text-sm italic text-gray-400 text-left xl:text-base lg:mb-0">Some CMS controls of the back-end</p>
                 </div>
             </div>
 
