--- a/OGB-connect-product-design.html
+++ b/OGB-connect-product-design.html
@@ -181,7 +181,8 @@
                     <img class="bg-gray-300 bg-opacity-0 rounded-full w-8 h-8 p-1 opacity-50 lg:hidden" src="img/ArrowBottom.svg" alt="">
                 </div>
                 <div class="hidden lg:block" id="content1">
-                    <p class="mt-2 text-base text-gray-700 lg:text-sm xl:text-lg pb-2 lg:pb-0" >Interacting with the users was important at every step of the way. Since the users were microfinance employees working in rural areas of Nepal, I had a lot to learn about them. I conducted user inter interviews, both virtually and on-site, to understand them better. I had to understand their daily life, their work life and their way of operations. It was also important to understand their relationship with the current application, their problems. and their aspirations. I also conducted multiple rounds of user testing and feedback gathering as soon as the prototypes were ready. This helped gather constant validation that the re-design was a step in the right direction.</p>
+                    <p class="mt-2 text-base text-gray-700 lg:text-sm xl:text-lg pb-2 lg:pb-0" >Interacting with the users was important at every step of the way. Since the users were microfinance employees working in rural areas of Nepal, I had a lot to learn about them. I conducted user inter interviews, both virtually and on-site, to understand them better. I had to understand their daily life, their work life, and their way of operations. It was also important to understand their relationship with the current application, and their problems. and their aspirations. I also conducted multiple rounds of user testing and feedback gathering as soon as the prototypes were ready. This helped gather constant validation that the re-design was a step in the right direction.
+                    </p>
                     <div class="mt-8 flex flex-wrap justify-left lg:flex-nowrap overflow:scroll lg:overflow-hidden">
                         <a class="glightbox w-3/3 lg:w-3/6 inline" href="img/Connect/Observing the work life of microfinance agents.webp" data-glightbox="type: image; description: Visiting microfinance agents in the field and observing their professional life" data-gallery="g2" >
                             <img class="pb-3 lg:pr-3 lg:pb-0" src="img/Connect/Observing the work life of microfinance agents.webp" alt="image" />
@@ -190,7 +191,7 @@
                             <img class="pb-3 lg:pr-3 lg:pb-0" src="img/Connect/Observing microfinance agents interact with our software - Thumbnail.webp" alt="image" />
                         </a>
                     </div>
-                     <p class="mt-2 mb-3 text-sm italic text-gray-400 text-left xl:text-base lg:mb-8">Some photos taken during on-site user research in remote areas of Nepal</p>
+                     <p class="mt-2 mb-3 text-sm italic text-gray-400 text-left xl:text-base lg:mb-8">Some photos that were taken during on-site user research in remote areas of Nepal</p>
                 </div>
             </div>
 
@@ -237,7 +238,7 @@
             <h3 class="text-lg font-semibold text-gray-900 opacity-75 lg:col-span-12 xl:text-xl xl:mb-4">Solution</h3>
             <div>
                 <h1 class="text-3xl font-bold text-akayik-900 xl:text-4xl">Highlights of the outcome</h1>
-                <p class="mt-4 text-base text-gray-700 lg:text-sm xl:text-lg mb-4">There was a lot of uncertainty with regards to the re-design before it was launched. Would the user group actually accept the re-design? Would the re-design actually drive up the lead generation? These questions were valid and prominent before the product was launched. Despite the self-doubt and the preliminary resistance, the outcomes were worth everything. </p>
+                <p class="mt-4 text-base text-gray-700 lg:text-sm xl:text-lg mb-4">There was a lot of uncertainty with regards to the re-design before it was launched. Would the user group accept the re-design? Would the re-design drive up the lead generation? These questions were valid and prominent before the product was launched. Despite the self-doubt and the preliminary resistance, the outcomes were worth everything.</p>
             </div>
 
         </div>
@@ -246,7 +247,7 @@
 
             <div>
                 <div class="border-t-2 border-b-2 py-2 flex justify-between items-center lg:py-0 lg:border-0" id="heading4" onclick="accordion(this.id);" >
-                    <h2 class="text-xl font-bold text-gray-800 xl:text-2xl pb-2 lg:pb-4" >User acceptance</h2>
+                    <h2 class="text-xl font-bold text-gray-800 xl:text-2xl pb-2 lg:pb-4" >User Acceptance</h2>
                     <img class="bg-gray-300 bg-opacity-0 rounded-full w-8 h-8 p-1 opacity-50 lg:hidden" src="img/ArrowBottom.svg" alt="">
                 </div>
                 <div class="hidden lg:block" id="content4">
@@ -272,7 +273,7 @@
                             </video>
                         </a>
                     </div>
-                     <p class="mt-2 mb-3 text-sm italic text-gray-400 text-left xl:text-base lg:mb-0">The final look and feel of the application dedicated for lead generation</p>
+                     <p class="mt-2 mb-3 text-sm italic text-gray-400 text-left xl:text-base lg:mb-0">The final look and feel of the application dedicated to lead generation</p>
                 </div>
             </div>
 
@@ -315,19 +316,19 @@
 
     <div class="bg-akayik-900">
         <div class="flex items-center justify-between px-8 pb-6 pt-8 sm:px-28 lg:px-14 lg:pt-12 lg:pb-10 2xl:max-w-screen-2xl 2xl:mx-auto">
-            <a href="my-emotions-matter-website-redesign.html"><div class="flex items-center pr-2">
+            <a href="channel-simplify-SaaS.html"><div class="flex items-center pr-2">
                 <img class="rotate-90 rounded-full w-8 h-8 p-1" src="img/ArrowWhite.svg" alt="">
                 <div class="lg:pl-4">
                     <p class="text-sm font-base text-white text-left opacity-50 lg:text-base xl:text-lg">Previous</p>
-                    <p class="text-sm font-medium text-white text-left lg:text-lg xl:text-xl">Website redesign for effective communication</p>
+                    <p class="text-sm font-medium text-white text-left lg:text-lg xl:text-xl">SaaS product for the hospitality industry</p>
                 </div>
                 </div>
             </a>
-            <a href="channel-simplify-SaaS.html">
+            <a href="super-krishak-system-design.html">
                 <div class="flex items-center pl-2">
                     <div class="lg:pr-4">
                         <p class="text-sm font-base text-white text-right opacity-50 lg:text-base xl:text-lg">Next</p>
-                        <p class="text-sm font-medium text-white text-right lg:text-lg xl:text-xl">Saas product for the hospitality industry</p>
+                        <p class="text-sm font-medium text-white text-right lg:text-lg xl:text-xl">Gamified learning for rural farmers in Nepal</p>
                     </div>
                 <img class="-rotate-90 rounded-full w-8 h-8 p-1" src="img/ArrowWhite.svg" alt="">
                 </div>
