--- a/my-emotions-matter-website-redesign.html
+++ b/my-emotions-matter-website-redesign.html
@@ -213,7 +213,7 @@
         <div class="pb-4 pt-2 h-fit lg:col-span-8">
             <h3 class="text-lg font-semibold text-gray-900 opacity-75 lg:col-span-12 xl:text-xl xl:mb-4">Solution</h3>
             <h1 class="text-3xl font-bold text-akayik-900 xl:text-4xl">Highlights from the outcome</h1>
-            <p class="mt-4 text-base text-gray-700 lg:text-sm xl:text-lg">The final outcome has been a rewarding experience. A minimal website was created with clear navigational patterns to guide the users based on their requirements. The company has seen significant growth in the quality of its leads and a noticeable improvement in its interactions with its clients. The clients have more clarity on what they want and what offerings they seek. </p>
+            <p class="mt-4 text-base text-gray-700 lg:text-sm xl:text-lg">The outcome was a rewarding experience. A minimal website was created with clear navigational patterns to guide the users based on their requirements. The company has seen significant growth in the quality of its leads and a noticeable improvement in its interactions with its clients. The clients have more clarity on what they want and what offerings they seek. </p>
         </div>
         <div class="lg:col-span-12">
             <div class="flex flex-wrap sm:flex-nowrap overflow-x-auto lg:overflow-hidden">
