--- a/about.html
+++ b/about.html
@@ -13,6 +13,15 @@
     <!-- CDN for Glightbox -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔥</text></svg>">
+    <!-- Meta tags for the thumbnail -->
+    <meta property='og:title'content='Akayik : UX Designer'/>
+    <meta property='og:image' content='https://akayik.com/img/Thumbnail.jpg'/>
+    <meta property='og:description' content='Hi. I am Apurba Neupane. I am a UX Designer. Welcome to my portfolio website.'/>
+    <meta property='og:url' content='URL OF YOUR WEBSITE'/>
+    <meta property='og:image:width' content='1200' />
+    <meta property='og:image:height' content='700' />
+    <!-- TYPE BELOW IS PROBABLY: 'website' or 'article' or look on https://ogp.me/#types -->
+    <meta property="og:type" content='website'/>
 </head>
 <body class="font-sans overflow-y-scroll overflow-x-hidden" id="body" onload="hideLoader(); slideHeader();" onscroll="smallHeader(); slideHeader();">
 
