--- a/about.html
+++ b/about.html
@@ -206,7 +206,7 @@
 
     <div class="bg-gray-200">
         <div class="pt-8 lg:pt-10">
-            <a href="akayik.com"><img src="img/logo-gray-700.svg" class="h-10 mx-auto opacity-50" alt=""></a>
+            <a href="https://akayik.com/"><img src="img/logo-gray-700.svg" class="h-10 mx-auto opacity-50" alt=""></a>
             <p class="text-gray-700 text-center text-xs opacity-50 pb-8 lg:pb-12 xl:text-sm mt-2">© 2022 Apurba Neupane</p>
         </div>
     </div>
