--- a/index.html
+++ b/index.html
@@ -217,12 +217,17 @@
                     <div class="testimonial">
                         <p class="testimonialcontent">I find it easy to work with people who take the time to listen and understand first before offering their two cents. Apurba does just that. He's been easy to work with because he seeks feedback. Thanks to him, we have been better able to communicate our brand values than before.</p>
                         <p class="testimonialPerson">Sagar Satyal</p>
-                        <p class="testimonialCompany">My Emotions Matter</p>
+                        <p class="testimonialCompany">Co-founder, My Emotions Matter</p>
                     </div>
                     <div class="testimonial">
                         <p class="testimonialcontent">Apurba takes his clients on a co-creative journey that all feels effortless in the end. I have collaborated in quite a number of Commissioned as well as Volunteering projects with him. The outputs and the support has kept me continuing to recommend him to everyone requiring a design solution for more than 5 years now. </p>
                         <p class="testimonialPerson">Pankaj Niroula</p>
                         <p class="testimonialCompany">Tech Lead, King's College</p>
+                    </div>
+                    <div class="testimonial">
+                        <p class="testimonialcontent">Apurba was an energetic part of our team that brought a keen sense of design and user-friendliness to our products and services. He is dedicated, passionate, and a hard-working professional. His friendly and thoughtful presence made our cross-team communication smoother and has been a valuable  asset since day one.</p>
+                        <p class="testimonialPerson">Manish Marahatta</p>
+                        <p class="testimonialCompany">CEO, Eydean Inc.</p>
                     </div>
                 </div>
             </div>
