--- a/dealership-marketing-website.html
+++ b/dealership-marketing-website.html
@@ -130,7 +130,7 @@
             <h3 class="text-lg font-semibold opacity-80 xl:text-xl">Web design</h3>
             <div class="grid grid-cols-1 lg:grid-cols-12 xl:mt-4">
                 <h1 class="text-3xl font-bold col-span-1 lg:col-span-5 xl:text-4xl">I designed a marketing website for a vehicle dealership</h1>
-                <p class="mt-4 text-base col-span-1 lg:col-span-6 lg:mt-0 lg:col-start-7 lg:text-sm xl:text-lg">My client is a leading car dealership that exclusively sells Tata vehicles. They had slowly taken over the pickup-truck marker and other trucks used by small business owners for goods delivery. They were aiming at expanding their business and decided that they needed a website. They wanted to create a website that would cater to large corporate businesses as well as small businesses.</p>
+                <p class="mt-4 text-base col-span-1 lg:col-span-6 lg:mt-0 lg:col-start-7 lg:text-sm xl:text-lg">My client is a leading car dealership that exclusively sells Tata vehicles. They had slowly taken over the pickup-truck market and as well as the market for other vehicles used by small and large business. They were aiming at expanding their business and decided that they needed a website. They wanted to create a website that would cater to large corporate businesses as well as small businesses.</p>
             </div>
         </div>
     </div>
