Added Angelsing, updated date, updated previous/next
Added all the content for Angelswing. Changed the date in copyright message of the footer to 2023, Changed the previous/ next links of the website to make more sense.

--- a/channel-simplify-SaaS.html
+++ b/channel-simplify-SaaS.html
@@ -371,11 +371,11 @@
 
     <div class="bg-akayik-900">
         <div class="flex items-center justify-between px-8 pb-6 pt-8 sm:px-28 lg:px-14 lg:pt-12 lg:pb-10 2xl:max-w-screen-2xl 2xl:mx-auto">
-            <a href="off-grid-bazaar-project-management.html"><div class="flex items-center pr-2">
+            <a href="angelswing-SaaS.html"><div class="flex items-center pr-2">
                 <img class="rotate-90 rounded-full w-8 h-8 p-1" src="img/ArrowWhite.svg" alt="">
                 <div class="lg:pl-4">
                     <p class="text-sm font-base text-white text-left opacity-50 lg:text-base xl:text-lg">Previous</p>
-                    <p class="text-sm font-medium text-white text-left lg:text-lg xl:text-xl">Project management for a government initiative</p>
+                    <p class="text-sm font-medium text-white text-left lg:text-lg xl:text-xl">SaaS Product for the consturction industry</p>
                 </div>
                 </div>
             </a>
@@ -394,7 +394,7 @@
     <div class="bg-akayik-900">
         <div class="pt-8 lg:pt-10">
             <a href="https://akayik.com/"><img src="img/logo-white.svg" class="h-10 mx-auto opacity-50" alt=""></a>
-            <p class="text-white text-center text-xs opacity-50 pb-8 lg:pb-12 xl:text-sm mt-2">© 2022 Apurba Neupane</p>
+            <p class="text-white text-center text-xs opacity-50 pb-8 lg:pb-12 xl:text-sm mt-2">© 2023 Apurba Neupane</p>
         </div>
     </div>
 
