--- a/off-grid-bazaar-project-management.html
+++ b/off-grid-bazaar-project-management.html
@@ -301,11 +301,11 @@
                 </div>
                 </div>
             </a>
-            <a href="channel-simplify-SaaS.html">
+            <a href="dealership-marketing-website.html">
                 <div class="flex items-center pl-2">
                     <div class="lg:pr-4">
                         <p class="text-sm font-base text-white text-right opacity-50 lg:text-base xl:text-lg">Next</p>
-                        <p class="text-sm font-medium text-white text-right lg:text-lg xl:text-xl">Saas product for the hospitality industry</p>
+                        <p class="text-sm font-medium text-white text-right lg:text-lg xl:text-xl">Website for a vehicle dealership</p>
                     </div>
                 <img class="-rotate-90 rounded-full w-8 h-8 p-1" src="img/ArrowWhite.svg" alt="">
                 </div>
@@ -316,7 +316,7 @@
     <div class="bg-akayik-900">
         <div class="pt-8 lg:pt-10">
             <a href="https://akayik.com/"><img src="img/logo-white.svg" class="h-10 mx-auto opacity-50" alt=""></a>
-            <p class="text-white text-center text-xs opacity-50 pb-8 lg:pb-12 xl:text-sm mt-2">© 2022 Apurba Neupane</p>
+            <p class="text-white text-center text-xs opacity-50 pb-8 lg:pb-12 xl:text-sm mt-2">© 2023 Apurba Neupane</p>
         </div>
     </div>
 
