--- a/angelswing-SaaS.html
+++ b/angelswing-SaaS.html
@@ -238,7 +238,7 @@
             <h3 class="text-lg font-semibold text-gray-900 opacity-75 lg:col-span-12 xl:text-xl xl:mb-4">Solution</h3>
             <div>
                 <h1 class="text-3xl font-bold text-akayik-900 xl:text-4xl">Highlights of the outcome</h1>
-                <p class="mt-4 text-base text-gray-700 lg:text-sm xl:text-lg mb-4">Despite there being a massive lack of clarity in the early stages of the design process, we were in a much better state when we moved on to designing the actual website. In the end, we were able to create some UI patterns that we were proud of.</p>
+                <p class="mt-4 text-base text-gray-700 lg:text-sm xl:text-lg mb-4">After a better understanding of the users’ pain points and bringing everyone on the same page, we were able to create a bunch of intuitive solutions that we are proud of.</p>
             </div>
 
         </div>
