--- a/about.html
+++ b/about.html
@@ -148,10 +148,10 @@
                     <a class="glightbox col-span-1 row-span-2 md:col-span-3" href="img/mug.jpg" data-glightbox="type: image; description: Negative space logo I designed for a coffee company" data-gallery="g1" >
                         <img class = "h-full w-full object-cover object-center" src="img/mug.jpg" alt="image" />
                     </a>
-                    <a class="glightbox col-span-2 row-span-1 md:col-span-4" href="img/sasheela.jpg" data-glightbox="type: image; description: UI design for a jewellery e-commerce platform" data-gallery="g1" >
+                    <a class="glightbox col-span-2 row-span-1 md:col-span-4" href="img/sasheela.jpg" data-glightbox="type: image; description: Website design for a vehicle dealership" data-gallery="g1" >
                         <img class = "h-full w-full object-cover object-center" src="img/sasheela.jpg" alt="image" />
                     </a>
-                    <a class="glightbox col-span-2 row-span-1 md:col-span-4" href="img/gahana.jpg" data-glightbox="type: image; description: Website design for a vehicle dealership" data-gallery="g1" >
+                    <a class="glightbox col-span-2 row-span-1 md:col-span-4" href="img/gahana.jpg" data-glightbox="type: image; description: UI design for a jewellery e-commerce platform" data-gallery="g1" >
                         <img class = "h-full w-full object-cover object-center" src="img/gahana.jpg" alt="image" />
                     </a>
                 </div>
